--- a/views/partials/list.handlebars
+++ b/views/partials/list.handlebars
@@ -5,7 +5,7 @@
             <div class="row">
                 <div class="col-10">                    
                     <span class="list-item-desc pr-2">
-                        <a href="/edit/{{item.id}}">{{item.description}}</a>
+                        <a href="/items/edit/{{item.id}}">{{item.description}}</a>
                     </span>
                     <span class="badge-container px-1">
                         {{#each item.tags as |tag|}}
