--- a/static/style.css
+++ b/static/style.css
@@ -38,5 +38,14 @@ footer {
     columns: 2;
 }
 
+.login-page {
+    width: 50%;
+}
+
+.login-page .form-group {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
 
 
