--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -25,8 +25,8 @@
                 </div>
                 <div class="modal-footer">
                     {{#if edit}}
-                        <button class="btn btn-danger mr-500" type="submit" form="item-form" value="submit" formAction="/items/remove/{{item.id}}" formmethod="post">Delete</button>    
-                        <button class="btn btn-secondary" type="submit" form="item-form" value="submit" formAction="/items/edit" formmethod="post">Save</button> 
+                        <button class="btn btn-danger mr-500" type="submit" form="item-form" value="submit" formAction="/remove/{{item.id}}" formmethod="post">Delete</button>    
+                        <button class="btn btn-secondary" type="submit" form="item-form" value="submit" formAction="/edit" formmethod="post">Save</button> 
                     {{else}}
                         <button class="btn btn-secondary" type="submit" form="item-form" value="submit">Save</button>    
                     {{/if}}
